src/objects/Web_Form__c.object
<CustomObject>
    <fields>
        <fullName>Background_Color__c</fullName>
        <label>Background Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose a folder this web form belongs to.</inlineHelpText>
        <label>Folder</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The folder in which you place a web form needs to be of type &apos;WebForm&apos;</errorMessage>
            <filterItems>
                <field>CMSFolder__c.Type__c</field>
                <operation>equals</operation>
                <value>WebForm</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMSFolder__c</referenceTo>
        <relationshipLabel>Web Forms</relationshipLabel>
        <relationshipName>Web_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_Label__c</fullName>
        <description>The label of the object which fields will be filled by this form.</description>
        <inlineHelpText>The label of the object which fields will be filled by this form.</inlineHelpText>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>The API name of the object which fields will be filled by this form.</description>
        <inlineHelpText>The API name of the object which fields will be filled by this form.</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_URL__c</fullName>
        <description>URL the user will go to after saving the form.</description>
        <inlineHelpText>URL the user will be redirected to after saving the form.</inlineHelpText>
        <label>Return URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Save_Button_Text__c</fullName>
        <defaultValue>&quot;Save&quot;</defaultValue>
        <description>The text that will appear on the form&apos;s save button.</description>
        <inlineHelpText>The text that will appear on the form&apos;s save button.</inlineHelpText>
        <label>Save Button Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SavedByWebformeditor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is internal to the app and is used to track if people didn&apos;t forget to override the edit and new buttons on the webform object. Only the webform editor will set this flag.</description>
        <label>SavedByWebformeditor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_Color__c</fullName>
        <label>Text Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The title of the form.</description>
        <inlineHelpText>The title that will appear on the form. This can be left blank.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Web Form ID</label>
        <type>Text</type>
    </fields>
    <label>Web Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Web_Form_Name_field_can_not_be_empty</fullName>
        <active>true</active>
        <description>This rule will fire if somebody fills in a web form without filling in the name field.</description>
        <errorConditionFormula>IF( ISNULL( Name ), true, false )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The &apos;Name&apos; field can not be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Web_Form_folder_can_not_be_empty</fullName>
        <active>true</active>
        <description>Web Form folder can not be empty</description>
        <errorConditionFormula>ISBLANK( Folder__c)</errorConditionFormula>
        <errorDisplayField>Folder__c</errorDisplayField>
        <errorMessage>Please select a folder.</errorMessage>
    </validationRules>
</CustomObject>